--- a/index.html
+++ b/index.html
@@ -6,63 +6,119 @@
     <title>Anime GIF Viewer ✨</title>
     <style>
       body {
-        background-color: #1a1a1a;
+        background: linear-gradient(135deg, #1a1a1a, #2a0038);
         color: #fff;
         font-family: "Poppins", sans-serif;
         text-align: center;
-        padding-top: 50px;
+        padding: 60px 20px;
+        min-height: 100vh;
       }
+
       h1 {
         font-size: 2rem;
         margin-bottom: 20px;
+        background: linear-gradient(90deg, #ff85d2, #7cf4ff);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
       }
+
       img {
-        max-width: 300px;
-        border-radius: 10px;
-        box-shadow: 0 0 20px rgba(255, 255, 255, 0.2);
-        transition: all 0.5s ease;
+        max-width: 320px;
+        border-radius: 12px;
+        box-shadow: 0 0 25px rgba(255, 255, 255, 0.2);
+        transition: all 0.6s ease;
+        display: none; /* hidden until loaded */
       }
-      img:hover {
-        transform: scale(1.05);
+
+      img.show {
+        display: inline-block;
+        opacity: 1;
+        transform: scale(1);
       }
+
+      #loader {
+        width: 48px;
+        height: 48px;
+        border: 5px solid rgba(255, 255, 255, 0.3);
+        border-top-color: #ff6ad5;
+        border-radius: 50%;
+        animation: spin 1s linear infinite;
+        margin: 40px auto;
+      }
+
+      @keyframes spin {
+        to {
+          transform: rotate(360deg);
+        }
+      }
+
       p {
         margin-top: 15px;
         color: #ccc;
         font-size: 0.9rem;
       }
+
       button {
-        margin-top: 20px;
-        background: #ff6ad5;
+        margin-top: 25px;
+        background: linear-gradient(90deg, #ff6ad5, #7cf4ff);
         border: none;
         color: #fff;
-        padding: 10px 20px;
+        padding: 10px 22px;
         font-size: 1rem;
-        border-radius: 5px;
+        border-radius: 8px;
         cursor: pointer;
-        transition: all 0.3s;
+        transition: transform 0.2s ease, opacity 0.3s ease;
       }
+
       button:hover {
-        background: #ff89ef;
+        transform: scale(1.05);
+        opacity: 0.9;
       }
     </style>
   </head>
+
   <body>
     <h1>🌸 Random Anime GIF 🌸</h1>
-    <img id="animeGif" src="/api/random-gif" alt="Anime GIF" />
-    <p>Auto-refreshes every 30 seconds — or click the button below 🌟</p>
-    <button id="refreshBtn">🔄 Get New GIF</button>
+
+    <div id="loader"></div>
+    <img id="animeGif" src="" alt="Anime GIF" />
+    <p>Auto-refreshes every 30 seconds — or click below 🌟</p>
+    <button id="refreshBtn">🔄 New GIF</button>
 
     <script>
       const img = document.getElementById("animeGif");
+      const loader = document.getElementById("loader");
       const refreshBtn = document.getElementById("refreshBtn");
 
-      function loadNewGif() {
-        img.src = `/api/random-gif?t=${Date.now()}`;
+      async function loadNewGif() {
+        loader.style.display = "block";
+        img.classList.remove("show");
+
+        const newSrc = `/api/random-gif?t=${Date.now()}`;
+        const tempImg = new Image();
+
+        tempImg.onload = () => {
+          img.src = newSrc;
+          loader.style.display = "none";
+          img.classList.add("show");
+        };
+
+        tempImg.onerror = () => {
+          loader.style.display = "none";
+          img.src = "https://i.waifu.pics/2E6Zbwv.gif"; // fallback image
+          img.classList.add("show");
+        };
+
+        tempImg.src = newSrc;
       }
 
+      // On load
+      loadNewGif();
+
+      // Button click
       refreshBtn.addEventListener("click", loadNewGif);
 
-      // Auto refresh every 30 seconds
+      // Auto refresh every 30s
       setInterval(loadNewGif, 30000);
     </script>
   </body>
